fixed footer overlap

--- a/static/style.css
+++ b/static/style.css
@@ -254,6 +254,7 @@ input:checked + .slider:before {
   border-radius: 5px;
   display: flex;
   background: white;
+  padding-bottom: 50px;
 }
 .dev {
   display: flex;
